update examples, add examples for visualize and extract

--- a/examples/evaluate.ipynb
+++ b/examples/evaluate.ipynb
@@ -3,148 +3,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import glob\n",
     "import os.path\n",
-    "import re\n",
-    "import itertools\n",
-    "from collections import Counter\n",
     "\n",
-    "import numpy\n",
-    "from sklearn.preprocessing import scale\n",
-    "import tensorflow\n",
     "import keras\n",
+    "import matplotlib.pyplot\n",
+    "import numpy\n",
+    "import pandas\n",
+    "import seaborn\n",
+    "import sklearn.metrics\n",
+    "import tensorflow\n",
     "\n",
-    "import deepometry.model"
+    "import deepometry.model\n",
+    "import deepometry.utils"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Evaluate\n",
     "\n",
     "After training a model to classify single cell images, it is often useful to evaluate the performance of the model on an unseen annotated dataset. Evaluation helps predict model performance on unseen data.\n",
     "\n",
-    "Suppose we have the following directory structure where images from one experiment (`experiment_02`) have been classified as one of three classes (`class_A`, `class_B`, or `class_C`). Data from this experiment was not shown to the model during training. Images are saved as NPY files with patient prefixes:\n",
+    "Suppose we have the following directory structure. Data from this experiment was not shown to the model during training. Images are saved as NPY files with patient prefixes:\n",
     "\n",
     "    /data/parsed/\n",
-    "        experiment_02/\n",
-    "            class_A/\n",
-    "                patient_A__32e88e1ac3a8f44bf8f77371155553b9.npy\n",
-    "                patient_A__3dc56a0c446942aa0da170acfa922091.npy  \n",
+    "        patient_C/\n",
+    "            positive/\n",
+    "                patient_C__32e88e1ac3a8f44bf8f77371155553b9.npy\n",
+    "                patient_C__3dc56a0c446942aa0da170acfa922091.npy  \n",
     "                ...\n",
-    "            class_B/\n",
-    "                patient_A__8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
-    "                patient_A__8348deaa70dfc95c46bd02984d28b873.npy\n",
-    "                ...\n",
-    "            class_C/  \n",
-    "                patient_A__c1ecbca7bd98c01c1d3293b64cd6739a.npy\n",
-    "                patient_A__c56cfb8e7e7121dd822e47c67d07e2d4.npy\n",
+    "            negative/\n",
+    "                patient_C__8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
+    "                patient_C__8348deaa70dfc95c46bd02984d28b873.npy\n",
     "                ...\n",
     "                \n",
     "\n",
-    "The data can be used to evaluate a model for classifying image data as one of the three classes. The `collect_pathnames` and `load` functions defined below will select images to use for evaluating the model and generate the labels for the evaluation images."
+    "The data can be used to evaluate a model for classifying image data as one of the three classes. The `deepometry.utils.load` function selects images to use for evaluating the model and generate the labels for the evaluation images. We can limit the number of samples to 256 samples per-class by specifying `samples=256`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "def collect_pathnames(directories, labels):\n",
-    "    \"\"\"\n",
-    "    :param directories: List of directories to select samples from. Assumes subdirectories of each directory\n",
-    "                        correspond to class labels. Contents of subdirectories are NPY files containing data\n",
-    "                        of that label.\n",
-    "    :return: List of pathnames.\n",
-    "    \"\"\"\n",
-    "    pathnames = []\n",
+    "directories = glob.glob(os.path.join(\"data\", \"*\"))\n",
     "\n",
-    "    for directory in directories:\n",
-    "        subdirectories = sorted(glob.glob(os.path.join(directory, \"*\")))\n",
-    "        \n",
-    "        # transform the files of the same label into directory\n",
-    "        subdirectory_pathnames = [glob.glob(\"{}/*.npy\".format(subdirectory)) for subdirectory in subdirectories ]      \n",
-    "\n",
-    "        nsamples = max([len(pathnames) for pathnames in subdirectory_pathnames])\n",
-    "        print(nsamples)\n",
-    "\n",
-    "        pathnames += [list(numpy.random.permutation(pathnames)[:nsamples]) for pathnames in subdirectory_pathnames]\n",
-    "\n",
-    "    pathnames = sum(pathnames, [])\n",
-    "\n",
-    "    return pathnames\n",
-    "\n",
-    "\n",
-    "def load(pathnames, labels, patient_to_include):\n",
-    "    \"\"\"\n",
-    "    Load training and target data.\n",
-    "    \n",
-    "    Assumes data is stored in a directory corresponding to some class label.\n",
-    "\n",
-    "    :param pathnames: List of image pathnames.\n",
-    "    :param labels: List of class labels.\n",
-    "    :return: Tuple (training, target) data, as NumPy arrays.\n",
-    "    \"\"\"\n",
-    "    print('Before exclusion: ',len(pathnames))\n",
-    "    pathnames = [x for x in pathnames if patient_to_include in x]\n",
-    "    print('After exclusion: ',len(pathnames))\n",
-    "\n",
-    "    x = numpy.empty((len(pathnames),) + _shape(pathnames[0]), dtype=numpy.uint8)\n",
-    "\n",
-    "    y = numpy.empty((len(pathnames),), dtype=numpy.uint8)\n",
-    "\n",
-    "    label_to_index = {label: index for index, label in enumerate(sorted(labels))}\n",
-    "\n",
-    "    for index, pathname in enumerate(pathnames):\n",
-    "        if (os.path.isfile(pathname) == True):\n",
-    "\n",
-    "            label = os.path.split(os.path.dirname(pathname))[-1]\n",
-    "\n",
-    "            x[index] = numpy.load(pathname)\n",
-    "\n",
-    "            y[index] = label_to_index[label]\n",
-    "\n",
-    "    return x, y\n",
-    "\n",
-    "\n",
-    "def _shape(pathname):\n",
-    "    \"\"\"\n",
-    "    Infer the shape of the sample data from a single sample.\n",
-    "    \n",
-    "    :param pathname: Path to a sample.\n",
-    "    :return: Sample dimensions.\n",
-    "    \"\"\"\n",
-    "    return numpy.load(pathname).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "directories = [\"/data/parsed/\"]\n",
-    "\n",
-    "labels = [\"class_A\", \"class_B\", \"class_C\"]\n",
-    "\n",
-    "pathnames = collect_pathnames(directories, labels)\n",
-    "\n",
-    "patient_to_test = 'patient_A'\n",
-    "x, y = load(pathnames, labels, patient_to_test)"
+    "x, y, units = deepometry.utils.load(directories, sample=256)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -159,33 +102,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model = deepometry.model.Model(shape=x.shape[1:], units=4)\n",
-    "\n",
-    "model.compile()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model.model.load_weights('/model/resnet/model.h5')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "# Classification test"
@@ -193,7 +114,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The evaluation and target data (`x` and `y`, respectively) is next passed to the model for evaluation. **A previously trained model is required.** The `evaluate` method loads the trained model weights. See the `fit` notebook for instructions on training a model. \n",
     "\n",
@@ -206,10 +130,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
+    "model = deepometry.model.Model(shape=x.shape[1:], units=4)\n",
+    "\n",
+    "model.compile()\n",
+    "\n",
     "predicted = model.predict(\n",
     "    batch_size=50,\n",
     "    x=x\n",
@@ -223,31 +153,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot\n",
-    "import sklearn.metrics\n",
-    "import pandas\n",
-    "import seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "confusion = sklearn.metrics.confusion_matrix(expected, predicted)\n",
@@ -256,16 +165,17 @@
     "\n",
     "matplotlib.pyplot.figure(figsize=(12, 8))\n",
     "\n",
-    "seaborn.heatmap(confusion, annot=True)\n",
-    "\n",
-    "#output_directory = '/results/'\n",
-    "#matplotlib.pyplot.savefig( os.path.join(output_directory, 'confusion_matrix_absolute.eps') , format='eps', dpi=600)"
+    "seaborn.heatmap(confusion, annot=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "confusion = sklearn.metrics.confusion_matrix(expected, predicted)\n",
@@ -276,101 +186,7 @@
     "\n",
     "matplotlib.pyplot.figure(figsize=(12, 8))\n",
     "\n",
-    "seaborn.heatmap(confusion, annot=True)\n",
-    "\n",
-    "#output_directory = '/results/'\n",
-    "#matplotlib.pyplot.savefig( os.path.join(output_directory, 'confusion_matrix_percent.eps') , format='eps', dpi=600)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sklearn.metrics.accuracy_score(expected, predicted)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# For unsupervised t-SNE/PCA\n",
-    "\n",
-    "to be used on http://projector.tensorflow.org"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def collect_pathnames(directories, labels):\n",
-    "    \"\"\"\n",
-    "    :param directories: List of directories to select samples from. Assumes subdirectories of each directory\n",
-    "                        correspond to class labels. Contents of subdirectories are NPY files containing data\n",
-    "                        of that label.\n",
-    "    :return: List of pathnames.\n",
-    "    \"\"\"\n",
-    "    pathnames = []\n",
-    "\n",
-    "    for directory in directories:\n",
-    "        subdirectories = sorted(glob.glob(os.path.join(directory, \"*\")))\n",
-    "        \n",
-    "        # transform the files of the same label into directory\n",
-    "        filelist = [glob.glob(\"{}/*{}*\".format(subdirectory,label)) for label in labels for subdirectory in subdirectories ]\n",
-    "        \n",
-    "        subdirectory_pathnames = []\n",
-    "        for i in range(len(labels)):\n",
-    "            a = filelist[i*len(subdirectories):(i+1)*len(subdirectories)]\n",
-    "            subdirectory_pathnames.append( list(itertools.chain.from_iterable(a)) )        \n",
-    "\n",
-    "        #nsamples = max([len(pathnames) for pathnames in subdirectory_pathnames])\n",
-    "        nsamples = 5000 # this is helpful to limit the number of datapoints to be displayed on projector.tensorflow.org\n",
-    "\n",
-    "        pathnames += [list(numpy.random.permutation(pathnames)[:nsamples]) for pathnames in subdirectory_pathnames]\n",
-    "\n",
-    "    pathnames = sum(pathnames, [])\n",
-    "\n",
-    "    return pathnames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pathnames = collect_pathnames(directories, labels)\n",
-    "x, y = load(pathnames, labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.layers import *\n",
-    "from keras.models import Sequential"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "layers = model.model.layers"
+    "seaborn.heatmap(confusion, annot=True)"
    ]
   },
   {
@@ -378,97 +194,32 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": true
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "#model.model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(layers[-2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "abstract_model = None # Clear cached abstract_model\n",
-    "abstract_model = Sequential([layers[-2]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "extracted_features = abstract_model.predict(\n",
-    "    batch_size=50,\n",
-    "    x=x\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "numpy.savetxt('/results/table_of_features.txt' , scale(extracted_features), delimiter='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def save_metadata(file):\n",
-    "    with open(file, 'w') as f:\n",
-    "        for i in range(y.shape[0]):\n",
-    "            f.write('{}\\n'.format( list(sorted(labels))[y[i]] ))     \n",
-    "\n",
-    "save_metadata('/results/metadata.tsv')\n",
-    "\n",
-    "print('Done.')"
+    "sklearn.metrics.accuracy_score(expected, predicted)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
