--- a/examples/fit.ipynb
+++ b/examples/fit.ipynb
@@ -10,16 +10,31 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "import glob\n",
     "import os\n",
-    "import itertools\n",
-    "import re\n",
     "\n",
-    "import numpy\n",
-    "import tensorflow\n",
     "import keras\n",
+    "import matplotlib.pyplot\n",
+    "import numpy\n",
+    "import pandas\n",
+    "import pkg_resources\n",
+    "import tensorflow\n",
     "\n",
-    "import deepometry.model"
+    "import deepometry.model\n",
+    "import deepometry.utils"
    ]
   },
   {
@@ -36,27 +51,27 @@
     "    /data/\n",
     "        patient_A/\n",
     "            positive/\n",
-    "                32e88e1ac3a8f44bf8f77371155553b9.npy\n",
-    "                3dc56a0c446942aa0da170acfa922091.npy  \n",
+    "                patient_A__32e88e1ac3a8f44bf8f77371155553b9.npy\n",
+    "                patient_A__3dc56a0c446942aa0da170acfa922091.npy  \n",
     "                ...\n",
     "            negative/\n",
-    "                8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
-    "                8348deaa70dfc95c46bd02984d28b873.npy\n",
+    "                patient_A__8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
+    "                patient_A__8348deaa70dfc95c46bd02984d28b873.npy\n",
     "                ...\n",
     "        patient_B/\n",
     "            positive/\n",
-    "                3618e715e62a229aa78a7e373b49b888.npy\n",
-    "                3cf53cea7f4db1cfd101e06c366c9868.npy\n",
+    "                patient_B__3618e715e62a229aa78a7e373b49b888.npy\n",
+    "                patient_B__3cf53cea7f4db1cfd101e06c366c9868.npy\n",
     "                ...\n",
     "            negative/\n",
-    "                84949e1eba7802b00d4a1755fa9af15e.npy\n",
-    "                852a1edbf5729fe8721e9e5404a8ad20.npy\n",
+    "                patient_B__84949e1eba7802b00d4a1755fa9af15e.npy\n",
+    "                patient_B__852a1edbf5729fe8721e9e5404a8ad20.npy\n",
     "                ...\n",
     "\n",
     "                \n",
-    "The data can be used to train a model to classify image data as one of the three classes. The `sample` and `load` functions defined below will select images to use for training the model and generate the labels for the training images.\n",
+    "The data can be used to train a model to classify image data as one of each class. The `deepometry.utils.load` function selects images to use for training the model and generate the labels for the training images.\n",
     "\n",
-    "Suppose there is a large imbalance between the number of samples per class in each experiment. Undersampling across classes balances the data seen by the model during training. Additionally, `class_weights` are introduced to work together with undersampling to improve prediction accuracy in underrepresented classes. The `sample` function performs undersampling across classes (per-experiment)."
+    "Suppose there is a large imbalance between the number of samples per class in each experiment. Undersampling across classes balances the data seen by the model during training. Additionally, `class_weights` are introduced to work together with undersampling to improve prediction accuracy in underrepresented classes. The `deepometry.utils.load` function performs undersampling across classes (per-experiment) with `sample=True`."
    ]
   },
   {
@@ -69,118 +84,9 @@
    },
    "outputs": [],
    "source": [
-    "def _shape(pathname):\n",
-    "    \"\"\"\n",
-    "    Infer the shape of the sample data from a single sample.\n",
-    "    \n",
-    "    :param pathname: Path to a sample.\n",
-    "    :return: Sample dimensions.\n",
-    "    \"\"\"\n",
-    "    return numpy.load(pathname).shape\n",
+    "directories = glob.glob(os.path.join(\"data\", \"*\"))\n",
     "\n",
-    "\n",
-    "def load(pathnames, labels):\n",
-    "    \"\"\"\n",
-    "    Load training and target data.\n",
-    "    \n",
-    "    Assumes data is stored in a directory corresponding to some class label.\n",
-    "\n",
-    "    :param pathnames: List of image pathnames.\n",
-    "    :param labels: List of class labels.\n",
-    "    :return: Tuple (training, target) data, as NumPy arrays.\n",
-    "    \"\"\"\n",
-    "    x = numpy.empty((len(pathnames),) + _shape(pathnames[0]), dtype=numpy.uint8)\n",
-    "\n",
-    "    y = numpy.empty((len(pathnames),), dtype=numpy.uint8)\n",
-    "\n",
-    "    label_to_index = {label: index for index, label in enumerate(sorted(labels))}\n",
-    "\n",
-    "    for index, pathname in enumerate(pathnames):\n",
-    "        if os.path.isfile(pathname) == True:\n",
-    "\n",
-    "            label = os.path.split(os.path.dirname(pathname))[-1]\n",
-    "\n",
-    "            x[index] = numpy.load(pathname)\n",
-    "\n",
-    "            y[index] = label_to_index[label]\n",
-    "\n",
-    "    return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def sample(directories):\n",
-    "    \"\"\"\n",
-    "    Sample pathnames from directories. \n",
-    "    \n",
-    "    :param directories: List of directories to select samples from. Assumes subdirectories of each directory\n",
-    "                        correspond to class labels. Contents of subdirectories are NPY files containing data\n",
-    "                        of that label.\n",
-    "    :return: List of sampled pathnames.\n",
-    "    \"\"\"\n",
-    "    pathnames = []\n",
-    "\n",
-    "    for directory in directories:\n",
-    "        subdirectories = sorted(glob.glob(os.path.join(directory, \"*\")))\n",
-    "\n",
-    "        subdirectory_pathnames = [glob.glob(os.path.join(subdirectory, \"*\")) for subdirectory in subdirectories]\n",
-    "\n",
-    "        nsamples = int(numpy.median([len(pathnames) for pathnames in subdirectory_pathnames]))\n",
-    "\n",
-    "        pathnames += [list(numpy.random.permutation(pathnames)[:nsamples]) for pathnames in subdirectory_pathnames]\n",
-    "\n",
-    "    pathnames = sum(pathnames, [])\n",
-    "\n",
-    "    return pathnames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "directories = [\"/data/parsed/\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "labels = [\"positive\", \"negative\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "samples = sample(directories)\n",
-    "\n",
-    "x, y = load(samples, labels)"
+    "x, y, units = deepometry.utils.load(directories, sample=True)"
    ]
   },
   {
@@ -226,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "model = deepometry.model.Model(shape=x.shape[1:], units=len(labels))\n",
+    "model = deepometry.model.Model(shape=x.shape[1:], units=units)\n",
     "\n",
     "model.compile()\n",
     "\n",
@@ -242,21 +148,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import pandas\n",
-    "import pkg_resources\n",
-    "\n",
-    "import matplotlib.pyplot"
+    "Visualize training accuracy and loss"
    ]
   },
   {
