--- a/examples/evaluate.ipynb
+++ b/examples/evaluate.ipynb
@@ -76,9 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "directories = glob.glob(os.path.join(\"data\", \"*\"))\n",
-    "\n",
-    "x, y, units = deepometry.utils.load(directories, sample=256)"
+    "x, y, units = deepometry.utils.load([\"data/parsed/patient_C\"], sample=256)"
    ]
   },
   {
