--- a/examples/fit.ipynb
+++ b/examples/fit.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "After parsing raw image data, we expectingly have the following directory structure, where data arrays as .NPYs are saved in subdirectories named after the class labels (e.g. `positive`, `negative` etc.).\n",
     "\n",
-    "    /data/\n",
+    "    /data/parsed/\n",
     "        patient_A/\n",
     "            positive/\n",
     "                patient_A__32e88e1ac3a8f44bf8f77371155553b9.npy\n",
@@ -78,13 +78,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "directories = glob.glob(os.path.join(\"data\", \"*\"))\n",
+    "directories = glob.glob(os.path.join(\"data/parsed\", \"*\"))\n",
     "\n",
     "x, y, units = deepometry.utils.load(directories, sample=True)"
    ]
