--- a/examples/parse_CIF.ipynb
+++ b/examples/parse_CIF.ipynb
@@ -111,10 +111,15 @@
    "outputs": [],
    "source": [
     "for label in labels:\n",
-    "    print(\"Parsing directory: {}\".format(label))\n",
     "    src_dir = os.path.join(src, label)\n",
+    "    print(\"Parsing directory: {}\".format(src_dir))\n",
+    "\n",
     "    dest_dir = os.path.join(dest, label)\n",
+    "    if not os.path.exists(dest_dir):\n",
+    "        os.makedirs(dest_dir)\n",
+    "    \n",
     "    pathnames = glob.glob(os.path.join(src_dir, \"*.cif\"))\n",
+    "    \n",
     "    deepometry.parse.parse(pathnames, dest_dir, image_size, channels)\n",
     "\n",
     "print('Done')"
