--- a/examples/extract.ipynb
+++ b/examples/extract.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -12,7 +16,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import deepometry.model\n",
@@ -25,45 +33,60 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Extract\n",
     "\n",
-    "Suppose we have the following directory structure where images from one experiment (`experiment_00`) have been classified as one of three classes (`class_A`, `class_B`, or `class_C`). Data from this experiment was shown to the model during training. Images are saved as NPY files:\n",
+    "Suppose we have the following directory structure. Data from this experiment was shown to the model during training. Images are saved as NPY files:\n",
     "\n",
-    "    /data/\n",
-    "        experiment_00/\n",
-    "            class_A/\n",
-    "                32e88e1ac3a8f44bf8f77371155553b9.npy\n",
-    "                3dc56a0c446942aa0da170acfa922091.npy  \n",
+    "    /data/parsed/\n",
+    "        patient_A/\n",
+    "            positive/\n",
+    "                patient_A__32e88e1ac3a8f44bf8f77371155553b9.npy\n",
+    "                patient_A__3dc56a0c446942aa0da170acfa922091.npy  \n",
     "                ...\n",
-    "            class_B/\n",
-    "                8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
-    "                8348deaa70dfc95c46bd02984d28b873.npy\n",
+    "            negative/\n",
+    "                patient_A__8068ef7dcddd89da4ca9740bd2ccb31e.npy\n",
+    "                patient_A__8348deaa70dfc95c46bd02984d28b873.npy\n",
     "                ...\n",
-    "            class_C/  \n",
-    "                c1ecbca7bd98c01c1d3293b64cd6739a.npy\n",
-    "                c56cfb8e7e7121dd822e47c67d07e2d4.npy\n",
+    "        patient_B/\n",
+    "            positive/\n",
+    "                patient_B__3618e715e62a229aa78a7e373b49b888.npy\n",
+    "                patient_B__3cf53cea7f4db1cfd101e06c366c9868.npy\n",
+    "                ...\n",
+    "            negative/\n",
+    "                patient_B__84949e1eba7802b00d4a1755fa9af15e.npy\n",
+    "                patient_B__852a1edbf5729fe8721e9e5404a8ad20.npy\n",
     "                ...\n",
     "                \n",
     "\n",
-    "Use `deepometry.utils.load` to load images and their corresponding labels. The parameter `convert=False` ensures the values of `labels` are the subdirectory names of `experiment_00` (`class_A`, `class_B`, or `class_C`). "
+    "Use `deepometry.utils.load` to load images and their corresponding labels. The parameter `convert=False` ensures the values of `labels` are the subdirectory names of each patient (`positive`, or `negative`). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "directories = [\"/data/experiment_02/\"]\n",
+    "directories = [\"/data/parsed/patient_A\", \"/data/parsed/patient_B\"]\n",
     "\n",
     "x, labels, units = deepometry.utils.load(directories, convert=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Once the data is loaded, we can redefine the model and extract the embedded features of `x`. The features will be saved as a TSV file using pandas. We omit the column headers and the data frame indexes from the exported data."
    ]
@@ -71,7 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import keras.backend\n",
@@ -79,7 +106,7 @@
     "\n",
     "configuration = tensorflow.ConfigProto()\n",
     "configuration.gpu_options.allow_growth = True\n",
-    "configuration.gpu_options.visible_device_list = \"2\"\n",
+    "configuration.gpu_options.visible_device_list = \"3\"\n",
     "\n",
     "session = tensorflow.Session(config=configuration)\n",
     "keras.backend.set_session(session)"
@@ -88,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Instantiate the model\n",
@@ -105,7 +136,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Additional metadata can also be exported as a TSV. In this example, we export a single-column TSV containing the label data. Single-column metadata should exclude the column header (`header=False`). Metadata containing more than one column should include the column header (`header=True`)."
    ]
@@ -113,7 +147,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "metadata_df = pandas.DataFrame(data=labels)\n",
@@ -122,7 +160,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "When using TensorBoard to visualize an embedding, you can display a \"sprite\" image for each data point. A \"sprite\" is a small image. Use `deepometry.visualize.images_to_sprites` to create an NxN grid of sprites which TensorBoard can use to display image data for each feature."
    ]
@@ -130,7 +171,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Create the sprites image.\n",
@@ -147,21 +192,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
